# rusty_paseto

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE.md  README.md  SECURITY.md  flake.nix  funding.yml  readme.md  readme_crates_io.md  rustfmt.toml
.github/workflows/: rust.yml
examples/actix_identity/: main.rs  paseto.rs  readme.md
src/: builders.rs  claims.rs  common.rs  crypto.rs  decrypted_tokens.rs  errors.rs  headers.rs  keys.rs  lib.rs  parsers.rs  paserk.rs  paseto_builder.rs  paseto_parser.rs  tokens.rs  traits.rs  untrusted_tokens.rs  util.rs  v2.rs  verified_tokens.rs
src/core/: error.rs  footer.rs  header.rs  implicit_assertion.rs  mod.rs  paseto.rs  payload.rs  traits.rs  untrusted_token.rs  v1_public_test_vectors_private_key.pk8  v1_public_test_vectors_public_key.der
src/core/common/: authentication_key.rs  authentication_key_separator.rs  cipher_text.rs  encryption_key.rs  encryption_key_separator.rs  encryption_nonce.rs  hkdf_key.rs  mod.rs  pre_authentication_encoding.rs  raw_payload.rs  tag.rs
src/core/common/authentication_key_impl/: mod.rs  v1_local.rs  v3_local.rs  v4_local.rs
src/core/common/cipher_text_impl/: mod.rs  v1_local.rs  v1_public.rs  v2_local.rs  v3_local.rs  v4_local.rs
src/core/common/encryption_key_impl/: mod.rs  v1_local.rs  v3_local.rs  v4_local.rs  v_local.rs
src/core/common/raw_payload_impl/: mod.rs  nist_local.rs  v2_local.rs  v4_local.rs  v_public.rs
src/core/common/tag_impl/: mod.rs  nist_local.rs  v4_local.rs
src/core/key/: keys.rs  mod.rs  paseto_asymmetric_private_key.rs  paseto_asymmetric_public_key.rs  paseto_key.rs  paseto_nonce.rs  paseto_symmetric_key.rs
src/core/key/paseto_nonce_impl/: mod.rs  v1_local.rs  v2_local.rs  v2_public.rs  v3_local.rs  v4_local.rs
src/core/paseto_impl/: mod.rs  v1_local.rs  v1_public.rs  v2_local.rs  v2_public.rs  v3_local.rs  v3_public.rs  v4_local.rs  v4_public.rs
src/core/purpose/: local.rs  mod.rs  public.rs
src/core/version/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs
src/generic/: mod.rs
src/generic/builders/: error.rs  generic_builder.rs  mod.rs
src/generic/claims/: audience_claim.rs  custom_claim.rs  error.rs  expiration_claim.rs  issued_at_claim.rs  issuer_claim.rs  mod.rs  not_before_claim.rs  subject_claim.rs  token_identifier_claim.rs  traits.rs
src/generic/parsers/: error.rs  generic_parser.rs  mod.rs
src/prelude/: error.rs  mod.rs  paseto_builder.rs  paseto_parser.rs
tests/: api_tests.rs  build_payload_from_claims_prop_test.proptest-regressions  build_payload_from_claims_prop_test.rs  generic_claims_wrap_value_prop_test.proptest-regressions  generic_claims_wrap_value_prop_test.rs  untrusted_footer_key_rotation.rs  version1_test_vectors.rs  version2_test_vectors.rs  version3_test_vectors.rs  version4_test_vectors.rs
