[package]
name = "rusty_paseto"
version = "0.7.2"
edition = "2021"
readme = "readme.md"
authors = ["Roland Rodriguez <rolandrodriguez@gmail.com>"]
description = "A type-driven, ergonomic alternative to JWT for secure stateless PASETO tokens."
repository = "https://github.com/rrrodzilla/rusty_paseto"
license = "MIT OR Apache-2.0"
keywords = ["paseto", "token", "security", "api", "web"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]
documentation = "https://docs.rs/rusty_paseto/latest/rusty_paseto/"

[package.metadata.docs.rs]
# ARCHITECTURAL DESIGN: This crate uses mutually exclusive features by design.
# The PASETO specification recommends choosing a single version per application.
# Multiple public features cannot coexist due to intentionally conflicting trait
# implementations - this enforces compile-time safety and prevents version mixing.
# The feature-gated architecture minimizes binary size by only compiling the
# cryptographic dependencies you actually use.
all-features = false
# Build docs with default features (batteries_included + v4_local + v4_public)
# This showcases the complete API with the modern recommended PASETO version
features = ["batteries_included", "v4_local", "v4_public"]

[features]
v1 = []
v2 = []
v3 = []
v4 = []
public = []
local = []
v1_local = ["v1", "local", "core", "aes", "ctr", "chacha20", "hmac", "sha2", "blake2"]
v2_local = ["v2", "local", "core", "blake2", "chacha20poly1305"]
v3_local = ["v3", "local", "core", "aes", "ctr", "hmac", "sha2", "chacha20"]
v4_local = ["v4", "local", "core", "blake2", "chacha20"]
v1_public = ["v1", "public", "core", "ed25519-dalek"]
v2_public = ["v2", "public", "core", "ed25519-dalek", "ring/std"]
v3_public = ["v3", "public", "core", "p384", "sha2"]
v4_public = ["v4", "public", "core", "ed25519-dalek", "ring/std"]
core = []
generic = ["core", "serde", "erased-serde", "serde_json"]
batteries_included = ["generic"]
default = ["batteries_included", "v4_local", "v4_public"]

[lib]
doctest = true


[dependencies]
p384 = { version = "0.13", optional = true }
chacha20 = { version = "0.9", optional = true }
blake2 = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
ring = { version = "0.17", features = ["std"], optional = false }
base64 = { version = "0.22", optional = false }
hex = { version = "0.4", optional = false }
serde = { version = "1.0", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.0", features = ["zeroize"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
iso8601 = "0.6"
erased-serde = { version = "0.4", optional = true }
aes = { version = "0.8", optional = true }
ctr = { version = "0.9", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
zeroize = { version = "1.4", features = ["zeroize_derive"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
rand_core = "0.9"
digest = "0.10"

[dev-dependencies]
anyhow = "1.0"
serde_json = { version = "1.0" }
primes = "0.3"
actix-web = "4"
actix-identity = "0.4"
tokio = "1.17"
actix-utils = "3.0"
uuid = { version = "1.8", features = ["v4"] }
proptest = "1.4"
erased-serde = { version = "0.4" }

[[example]]
name = "actix_identity"
required-features = ["default"]
